Update notebook overview

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -12,6 +12,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f64083ea",
+   "metadata": {},
+   "source": [
+    "**Contributors**\n",
+    "- [Julius Kinyua](https://github.com/czarprocoder)\n",
+    "- [Abigael Nyabaga](https://github.com/Nyabaga)\n",
+    "- [Judy Koech](https://github.com/Judykoech)\n",
+    "- [Phillip Oluoch](https://github.com/OCHI-BUOY)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# 1. Business Understanding\n",
