Update image format & requirements

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -7,9 +7,9 @@
     "<h1 style=\"text-align:center; color: #2E86C1;\">Optimizing eBay Sales with Predictive Analytics</h1>\n",
     "<h3 style=\"text-align:center; color: #D35400;\">Analyzing Trends and Forecasting Future Performance!</h3>\n",
     "\n",
-    "<p align=\"center\">\n",
-    "  <img src=\"images/eBay-prediction.jpg\" alt=\"alt text\" />\n",
-    "</p>"
+    "<center>\n",
+    "  <img src=\"images/eBay-prediction.jpg\" alt=\"eBAY Prediction Model\" width=\"500\"/>\n",
+    "</center>"
    ]
   },
   {
