Add changes to deployment

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "52538272",
    "metadata": {},
    "source": [
     "<h1 style=\"text-align:center; color: #2E86C1;\">Optimizing eBay Sales with Predictive Analytics</h1>\n",
@@ -26,6 +27,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a7be11f8",
    "metadata": {},
    "source": [
     "# 1. Business Understanding\n",
@@ -65,6 +67,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6da491ad",
    "metadata": {},
    "source": [
     "# 2. Data Understanding\n",
@@ -90,6 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "240976bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,6 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "1cd41208",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,6 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "b74fbb11",
    "metadata": {},
    "outputs": [
     {
@@ -346,6 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "04254524",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,6 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "6ad13586",
    "metadata": {
     "scrolled": true
    },
@@ -480,6 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "d01a9656",
    "metadata": {},
    "outputs": [
     {
@@ -601,6 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "e8d1ac44",
    "metadata": {},
    "outputs": [
     {
@@ -632,6 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "9d046930",
    "metadata": {},
    "outputs": [
     {
@@ -660,6 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "4753193b",
    "metadata": {},
    "outputs": [
     {
@@ -812,6 +824,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "419b7f05",
    "metadata": {},
    "source": [
     "__Overview__\n",
@@ -825,6 +838,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c63a78f4",
    "metadata": {},
    "source": [
     "# 3. Data Preparation"
@@ -832,6 +846,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a3f192c9",
    "metadata": {},
    "source": [
     "We'll move on to the Data Preparation step, where we'll clean and prepare the data for modeling.\n",
@@ -847,6 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "34cfbd2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,6 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "b5033d2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,6 +881,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3c44c593",
    "metadata": {},
    "source": [
     "Then, we will set the date as the index so as to allow easier time-based operations as well as manipulations of the data.\n",
@@ -874,6 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "a642bc73",
    "metadata": {
     "scrolled": true
    },
@@ -905,6 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "70bdf648",
    "metadata": {},
    "outputs": [
     {
@@ -927,6 +947,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dd58e089",
    "metadata": {},
    "source": [
     "We are then going to drop columns that are not needed for modeling\n",
@@ -937,6 +958,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "7a829bf1",
    "metadata": {},
    "outputs": [
     {
@@ -1043,6 +1065,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e181d891",
    "metadata": {},
    "source": [
     "## Feature Engineering"
@@ -1050,6 +1073,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "966e34ea",
    "metadata": {},
    "source": [
     "Let's create a 'Year' and 'Month' column from the 'Date'"
@@ -1058,6 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "a70bdf13",
    "metadata": {
     "scrolled": true
    },
@@ -1083,6 +1108,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "d384d526",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1097,6 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "ffe870ee",
    "metadata": {},
    "outputs": [
     {
@@ -1251,6 +1278,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2deb84bc",
    "metadata": {},
    "source": [
     "With these features, you can now use them as inputs to train a predictive model. These lag features and rolling statistics can help the model understand trends, momentum, and volatility in the data, which are often crucial in time series forecasting tasks, such as predicting future closing prices."
@@ -1258,6 +1286,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ffa1ed3c",
    "metadata": {},
    "source": [
     "## Visualization"
@@ -1265,6 +1294,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "da293b95",
    "metadata": {},
    "source": [
     "Let's create a visualizaton of the historical closing prices over time prices"
@@ -1273,6 +1303,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "255cd16a",
    "metadata": {},
    "outputs": [
     {
@@ -1299,6 +1330,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fd289d49",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
    },
@@ -1313,6 +1345,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "456ce7d2",
    "metadata": {},
    "outputs": [
     {
@@ -1345,6 +1378,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a9704d7e",
    "metadata": {},
    "source": [
     "__Overview__\n",
@@ -1354,6 +1388,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "27eaf7cf",
    "metadata": {},
    "source": [
     "Let us now check for trend and seasonality in our data."
@@ -1362,6 +1397,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "f41f998a",
    "metadata": {},
    "outputs": [
     {
@@ -1411,6 +1447,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b0991c5c",
    "metadata": {},
    "source": [
     "1. Original Time Series: It shows that the overall movement of the stock closing prices over time has an upward movement.\n",
@@ -1424,6 +1461,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cace3404",
    "metadata": {},
    "source": [
     "**Check Stationarity:**\n",
@@ -1434,6 +1472,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "d5d46dfc",
    "metadata": {
     "scrolled": true
    },
@@ -1455,6 +1494,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "61ca5a6b",
    "metadata": {},
    "source": [
     "Non-Stationarity: The p-value is quite high ( 0.892970), well above the common thresholds of 0.05 or 0.10, meaning there is not enough evidence to reject the null hypothesis. This indicates that the time series is likely non-stationary.\n",
@@ -1467,6 +1507,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "448209d7",
    "metadata": {},
    "outputs": [
     {
@@ -1489,6 +1530,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9c4f43ec",
    "metadata": {},
    "source": [
     "ADF Statistic: A very negative value of -15.533247, strongly suggests that the null hypothesis of non-stationarity can be rejected.\n",
@@ -1503,6 +1545,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d2a90f33",
    "metadata": {},
    "source": [
     "# Modelling"
@@ -1510,6 +1553,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "de96d722",
    "metadata": {},
    "source": [
     "We will be using three models to train our data. That is :\n",
@@ -1522,6 +1566,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "8d22cacd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1533,6 +1578,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ab9716fb",
    "metadata": {},
    "source": [
     "1. Determine the ARIMA Parameters (p, d, q):\n",
@@ -1546,6 +1592,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "af1d68f1",
    "metadata": {},
    "outputs": [
     {
@@ -1576,6 +1623,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "603ea0d3",
    "metadata": {},
    "source": [
     "Given the lack of significant spikes in both plots, we can infer the following ARIMA parameters:\n",
@@ -1587,6 +1635,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1b71dadc",
    "metadata": {},
    "source": [
     "After you’ve determined initial guesses for 𝑝,and 𝑞 using ACF and PACF plots, we can use statistical criteria to select the best model.We will use AIC and BIC :\n",
@@ -1599,6 +1648,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "b7b71ee2",
    "metadata": {},
    "outputs": [
     {
@@ -1666,6 +1716,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "006be023",
    "metadata": {},
    "source": [
     "The provided plot is a visual representation of the performance of an ARIMA model in predicting eBay sales prices over time.\n",
@@ -1679,6 +1730,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
+   "id": "0725c69d",
    "metadata": {},
    "outputs": [
     {
@@ -1706,6 +1758,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
+   "id": "ff8b2d79",
    "metadata": {
     "scrolled": true
    },
@@ -1746,6 +1799,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ecdb51bb",
    "metadata": {},
    "source": [
     "the Prophet model seems to capture the general trend and seasonality of the time series data. However, further analysis and potential model refinements are necessary to draw more definitive conclusions about its accuracy and suitability for the specific use case.\n",
@@ -1769,6 +1823,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
+   "id": "a34df03c",
    "metadata": {},
    "outputs": [
     {
@@ -1807,6 +1862,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0aad2a00",
    "metadata": {},
    "source": [
     "Objective: Optimize inventory management by reducing stockouts and overstocks.\n",
@@ -1816,6 +1872,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
+   "id": "74961f19",
    "metadata": {},
    "outputs": [
     {
@@ -1835,6 +1892,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "98050131",
    "metadata": {},
    "source": [
     "This part of the code calculates the total expected sales for the next period (based on your forecast). The forecast.sum() operation sums up all the predicted sales values for the upcoming period.\n",
@@ -1847,6 +1905,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0d398071",
    "metadata": {},
    "source": [
     "# Evaluation"
@@ -1854,6 +1913,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8ba9d7c9",
    "metadata": {},
    "source": [
     "To evaluate the performance of your models (ARIMA, Prophet, SARIMA), you can use several metrics and techniques to compare their accuracy and effectiveness."
@@ -1861,6 +1921,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "43ef9cf6",
    "metadata": {},
    "source": [
     "To compare the performance of your ARIMA, Prophet, and SARIMA models, you'll follow these steps:\n",
@@ -1872,6 +1933,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
+   "id": "25450767",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1885,6 +1947,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
+   "id": "4e011589",
    "metadata": {},
    "outputs": [
     {
@@ -1991,6 +2054,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "962d747b",
    "metadata": {},
    "source": [
     "The Prophet model performs best based on the provided metrics:\n",
@@ -2002,6 +2066,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "924b8b0c",
    "metadata": {},
    "source": [
     "### **Making Predictions for December 2024** using prophet model."
@@ -2010,6 +2075,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
+   "id": "3c649b94",
    "metadata": {
     "scrolled": true
    },
@@ -2046,6 +2112,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
+   "id": "36ec0347",
    "metadata": {},
    "outputs": [
     {
@@ -2076,6 +2143,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "11b62688",
    "metadata": {},
    "source": [
     "**Columns in the Prediction Output**\n",
@@ -2090,6 +2158,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
+   "id": "232c2704",
    "metadata": {},
    "outputs": [
     {
@@ -2224,6 +2293,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
+   "id": "3b7efb9b",
    "metadata": {},
    "outputs": [
     {
@@ -2247,6 +2317,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b239b35f",
    "metadata": {},
    "source": [
     "From the output above we can say that the predicted  closing price for 12th of December 2024 in approximately 52.29 with an upper bound of 45.88 and a lower bound of 58.49. We have successfully come up with a model that predicts future closing prices."
@@ -2254,6 +2325,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "78216173",
    "metadata": {},
    "source": [
     "# Deployment"
@@ -2262,6 +2334,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
+   "id": "1eb1f24d",
    "metadata": {},
    "outputs": [
     {
@@ -2284,6 +2357,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "3d6ec2ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2292,6 +2366,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bf79b0db",
    "metadata": {},
    "source": [
     "# Conclusion and Recommendation"
@@ -2299,6 +2374,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0b06921f",
    "metadata": {},
    "source": [
     "### Conclusion\n",
@@ -2335,6 +2411,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e1fa04a3",
    "metadata": {},
    "source": [
     "**Next Steps**\n",
@@ -2345,7 +2422,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2359,7 +2436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
