Made changes to Readme

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -1540,7 +1540,7 @@
     "\n",
     "These results indicate that your differenced data is stationary.\n",
     "\n",
-    "Since stationarity has been achieved, meaning it no longer has a unit root and its statistical properties do not change over time, we can now proceed with fitting an ARIMA model to your data."
+    "Since stationarity has been achieved, meaning it no longer has a unit root and its statistical properties do not change over time, we can now proceed with fitting an ARIMA model to our data."
    ]
   },
   {
@@ -1722,7 +1722,7 @@
     "The provided plot is a visual representation of the performance of an ARIMA model in predicting eBay sales prices over time.\n",
     "1. **Training Data (Blue Line)**: This line represents the historical data used to train the ARIMA model spaning from the start to around the 5,000th data point.This data learns the patterns, trends, and seasonality in the sales prices.\n",
     "2. **Actual Prices (Orange Line)**:This line shows the actual sales prices for the period following the training data, which represents the true values that occurred after the model was trained.\n",
-    "3. **Predicted Prices (Red Line)**:This line represents the prices predicted by the ARIMA model.The flat red line indicates that the model's.\n",
+    "3. **Predicted Prices (Red Line)**:This line represents the prices predicted by the ARIMA model. The flat red line indicates that the model's predictions become static or fail to capture the variability in the actual sales prices, which could suggest that the model struggles with forecasting beyond the training data or that it may have overfitted to the training data.\n",
     "\n",
     "**Notice** that the predicted prices begin at the point where the actual prices start."
    ]
@@ -1802,17 +1802,17 @@
    "id": "ecdb51bb",
    "metadata": {},
    "source": [
-    "the Prophet model seems to capture the general trend and seasonality of the time series data. However, further analysis and potential model refinements are necessary to draw more definitive conclusions about its accuracy and suitability for the specific use case.\n",
+    "Our Prophet model seems to capture the general trend and seasonality of the time series data. However, further analysis and potential model refinements are necessary to draw more definitive conclusions about its accuracy and suitability for the specific use case.\n",
     "\n",
-    "Components of the Plot\n",
+    "**Components of the Plot**\n",
     "\n",
-    "Black Dots: These represent the actual observed data points in the time series.\n",
+    "- **Black Dots**: These represent the actual observed data points in the time series.\n",
     "\n",
-    "Blue Line: This is the Prophet model's prediction or forecast for the time series. It represents the overall trend and seasonal patterns captured by the model.\n",
+    "- **Blue Line**: This is the Prophet model's prediction or forecast for the time series. It represents the overall trend and seasonal patterns captured by the model.\n",
     "\n",
-    "Shaded Area: This area represents the uncertainty or confidence intervals around the forecast. It indicates the range within which the true values are likely to fall.\n",
+    "-  **Shaded Area**: This area represents the uncertainty or confidence intervals around the forecast. It indicates the range within which the true values are likely to fall.\n",
     "\n",
-    "Observations\n",
+    "**Observations**\n",
     "\n",
     "The plot spans from around 2001 to 2025, suggesting a relatively long time series.\n",
     "The black dots exhibit some volatility and seasonality, which the Prophet model seems to capture to a certain extent.\n",
@@ -1895,10 +1895,10 @@
    "id": "98050131",
    "metadata": {},
    "source": [
-    "This part of the code calculates the total expected sales for the next period (based on your forecast). The forecast.sum() operation sums up all the predicted sales values for the upcoming period.\n",
+    "This part of the code calculates the total expected sales for the next period, based on our. The forecast.sum() operation sums up all the predicted sales values for the upcoming period.\n",
     "\n",
     "Outcome:\n",
-    "The calculated expected sales for the next period is 47208.12851310898. If the forecast period is one month, and the expected sales are approximately 47,208 units , you would plan to have at least this amount of stock available to meet customer demand during that year.\n",
+    "The calculated expected sales for the next period is 47208.12851310898. If the forecast period is one month, and the expected sales are approximately 47,208 units, you would plan to have at least this amount of stock available to meet customer demand during that year.\n",
     "\n",
     "Inventory Management: The code helps in planning inventory by predicting total sales for the upcoming period, reducing the risks associated with improper stock levels."
    ]
